<resources>
    <string name="app_name">Platzigram</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">¿No tienes Cuenta?,  </string>
    <string name="create_here">Crea una aqui!</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_passwordconfirm">Confirmar Contraseña</string>
    <string name="text_createaccount">UNETE</string>
    <string name="toolbar_createaccount">Crear cuenta</string>
    <string name="hint_username_card">Rafael Velazquez</string>
    <string name="firstword_card">Hace</string>
    <string name="timecard_card">4 dias</string>
    <string name="likenumber_card">10 Me gusta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Buscar</string>
    <string name="home">Home</string>
    <string name="profile">Yo</string>
    <string name="likeDescription">Me gusta</string>
    <string name="titleImage_detail">\"Todo copas en la playa\"</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="simple_view_behavior">\"A material metaphor is the unifying theory of a rationalized space and a system of motion.\"         \"The material is grounded in tactile reality, inspired by the study of paper and ink, yet \"         \"technologically advanced and open to imagination and magic.\\n\"         \"Surfaces and edges of the material provide visual cues that are grounded in reality. The \"         \"use of familiar tactile attributes helps users quickly understand affordances. Yet the \"         \"flexibility of the material creates new affordances that supercede those in the physical \"         \"world, without breaking the rules of physics.\\n\"         \"The fundamentals of light, surface, and movement are key to conveying how objects move, \"         \"interact, and exist in space and in relation to each other. Realistic lighting shows \"         \"seams, divides space, and indicates moving parts.\\n\\n\"</string>
    <string name="picturehome_transition">picturetransition</string>
</resources>
