<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PictureDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_layoutheight"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsinToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary">

            <ImageView
                android:id="@+id/imageheader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:background="@drawable/attack"
                app:layout_collapseMode="parallax"
                />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/activity_vertical_margin"
                >
                <TextView
                    android:id="@+id/usernameDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/username_detail"
                    android:text="@string/hint_username_card"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:textStyle="bold"
                    />
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_vertical_margin">

                    <TextView
                        android:id="@+id/likeNumberDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/likenumber_detail"
                        android:text="10"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/secondWorldDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/likenumber_detail"
                        android:text="@string/likeDescription"
                        android:layout_marginLeft="@dimen/secondwordDetail"
                        android:textStyle="bold"
                        />

                </LinearLayout>
                
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_divider"
                        android:background="@android:color/darker_gray"
                        />

                <TextView
                    android:id="@+id/tittleImageDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/username_detail"
                    android:text="@string/titleImage_detail"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:paddingTop="@dimen/paddingtop_titleimageDetail"
                    />

                <TextView
                    android:id="@+id/textContentImageDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/username_detail"
                    android:text="@string/lorem"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="@dimen/paddingtop_titleimageDetail"
                    android:paddingRight="@dimen/padding_horizontal_detail"
                    android:paddingLeft="@dimen/padding_horizontal_detail"
                    />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/heart"
        android:elevation="4dp"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>